# pyramidex

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
assets/: claude-bootstrap.md  root-template.yaml
docs/: knowledge-design-guide.md  migrate.md
docs/prompts/: migrate-export.md  setup.md
scripts/: reimport.py
src/pyramidex/: bootstrap.py  claude_bootstrap.py  cli.py  config.py  db.py  drop.py  hooks.py  loader.py  reindex.py  symlink.py  verify.py
src/pyramidex/assets/: claude-bootstrap.md  config-template.yaml  root-template.yaml
tests/: test_hooks.py  test_paths.py  test_reindex.py
